# composite-analysis

./: pyproject.toml
composite_analysis/: database.py  effectiveprops.py  failure.py  layup.py  layup.yaml  main.py  mainwindow.py  material.py  parameters.yaml  plot.py  preprocess.py
tests/: tests.py
