[tool.poetry]
name = "composite-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "composite_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.3.1"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
