[tool.poetry]
name = "composite-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "composite_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.3.1"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"
pyqtgraph = "^0.12.4"
matplotlib = "^3.6.0"
PyYAML = "^6.0"
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
